syntax = "proto3";

package proto;

message PingRsp {
  int32 gameId = 1;
}
