syntax = "proto3";

package proto;

import "Point.proto";

message TargetMsg {
  int32 id = 1;
  Point point = 2;
}
